--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.1.1
+  provider: ^6.1.5+1
   shared_preferences: ^2.2.2
   fl_chart: ^0.66.0
   intl: ^0.18.1
